# cdislogging

./: .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Pipfile  README.md  clean.sh  dev-requirements.txt  pull_request_template.md  pyproject.toml  release_notes.sh  setup.py
.github/workflows/: ci.yml  wool.yaml
cdislogging/: __init__.py
tests/: test_logging.py
