[tool.poetry]
name = "cdislogging"
version = "1.2.0"
description = "Standardized logging tool and format for CTDS applications"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13,<4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
deptry = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
